<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
        xmlns:android = "http://schemas.android.com/apk/res/android"
        xmlns:tools = "http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".FiltersActivity">

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                      android:orientation="vertical">
            <TextView
                    android:text="@string/genres"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/textViewGenres"
                    android:textColor="@android:color/black" android:textSize="14sp"/>
            <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerviewGenres"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
            <TextView
                    android:text="@string/years"
                    android:layout_width="match_parent"
                    android:textColor="@android:color/black" android:textSize="14sp"
                    android:layout_height="wrap_content" android:id="@+id/textViewYears"/>
            <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerviewYears"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            <TextView
                    android:text="@string/directors"
                    android:layout_width="match_parent"
                    android:textColor="@android:color/black" android:textSize="14sp"
                    android:layout_height="wrap_content" android:id="@+id/textViewDirectors"/>
            <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerviewDirectors"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
            <Button
                    android:text="@string/apply_filter"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:gravity="end|fill_vertical"
                    android:id="@+id/apply_filter_button"
                    android:textAlignment="center"/>

        </LinearLayout>
    </ScrollView>





</FrameLayout>