<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools" android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


    <ImageView
            android:layout_width="120dp"
            android:layout_height="140dp" app:srcCompat="@mipmap/ic_launcher_round"
            android:id="@+id/imageView" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.0"/>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@+id/imageView" android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
            app:layout_constraintHorizontal_bias="0.0" app:layout_constraintVertical_bias="0.0">
        <TextView
                android:text="@string/textTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/title"
                android:layout_weight="1" android:textColor="@android:color/black" android:textSize="20sp"
                android:textStyle="bold"/>
        <TextView
                android:text="@string/textYear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/year"
                android:layout_weight="1" android:textColor="@android:color/black" android:textSize="16sp"
                android:textStyle="bold"/>
        <TextView
                android:text="@string/textDirector"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/director"
                android:layout_weight="1" android:textColor="@android:color/black" android:textSize="14sp"
                android:textStyle="bold"/>
        <TextView
                android:text="@string/textGenre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/genre"
                android:layout_weight="1" android:textColor="@android:color/black" android:textSize="12sp"
                android:textStyle="bold"/>
        <TextView
                android:text="@string/textDesription"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:id="@+id/desription"
                android:layout_weight="1" android:textColor="@android:color/black" android:textSize="12sp"
                android:textStyle="bold"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>