<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Main2Activity">
    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:orientation="vertical">
        <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                          android:orientation="vertical">
                <TextView
                        android:text="@string/genres"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:id="@+id/textViewGenres"
                        android:textColor="@android:color/black" android:textSize="18sp"
                        android:textStyle="bold"/>
                <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recyclerviewGenres"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"/>
                <TextView
                        android:text="@string/years"
                        android:layout_width="match_parent"
                        android:textColor="@android:color/black" android:textSize="18sp"
                        android:layout_height="wrap_content" android:id="@+id/textViewYears"
                        android:textStyle="bold"/>
                <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recyclerviewYears"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                <TextView
                        android:text="@string/directors"
                        android:layout_width="match_parent"
                        android:textColor="@android:color/black" android:textSize="18sp"
                        android:layout_height="wrap_content"
                        android:id="@+id/textViewDirectors"
                        android:textStyle="bold"/>
                <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recyclerviewDirectors"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"/>
            </LinearLayout>
        </ScrollView>

        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
    </LinearLayout>


</FrameLayout>